oxiplate-derive/tests/broken/include/missing-open-quote.stderr
error: Expected path to the template to include
 --> tests/broken/include/missing-open-quote.rs:4:33
  |
4 | #[oxiplate_inline(r#"{% include include.html.oxip" %}"#)]
  |                                 ^^^^^^^
